# yrs-webrtc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  release.yml
examples/: zeroconf.rs
examples/demo/: README.md  main.rs
examples/demo/frontend/: index.html  package-lock.json
src/: conn.rs  lib.rs  registry.rs  room.rs  signal.rs  zeroconf.rs
